force-app/main/default/objects/Supplier_Order__c/Supplier_Order__c.object-meta.xml
<CustomObject>
    <label>Supplier Order</label>
    <nameField>
        <label>Supplier Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>