force-app/main/default/objects/Supplier_Order__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <description>The item name is the name of item the supplier</description>
    <label>Item Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>computer</fullName>
            </value>
            <value>
                <fullName>toys</fullName>
            </value>
            <value>
                <fullName>shoes</fullName>
            </value>
            <value>
                <fullName>garden</fullName>
            </value>
            <value>
                <fullName>food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>