force-app/main/default/objects/Supplier_Order__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>This is intended to truck the order number, unique number.</description>
    <displayFormat>{YYYY}{MM}-{0}</displayFormat>
    <externalId>true</externalId>
    <label>Order Number</label>
    <type>AutoNumber</type>
</CustomField>