force-app/main/default/objects/Supplier_Order__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <label>Shipping Address</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>