force-app/main/default/objects/Supplier_Order__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Supplier Orders</relationshipLabel>
    <relationshipName>Supplier_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>