force-app/main/default/objects/Supplier_Order__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>(Cost__c  *  Quantity__c)  + (Tax_Rate__c * ( Cost__c  * Quantity__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>