force-app/main/default/objects/Supplier_Order__c/recordTypes/choose.recordType-meta.xml
<RecordType>
    <fullName>choose</fullName>
    <active>true</active>
    <label>choose</label>
</RecordType>