force-app/main/default/objects/Supplier_Order__c/recordTypes/ItemsChoos.recordType-meta.xml
<RecordType>
    <fullName>ItemsChoos</fullName>
    <active>true</active>
    <label>ItemsChoos</label>
</RecordType>