force-app/main/default/objects/Supplier_Order__c/recordTypes/Supplier_Record.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Record</fullName>
    <active>true</active>
    <label>Supplier Record</label>
</RecordType>