force-app/main/default/objects/Supplier_Order__c/validationRules/NameIsRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>NameIsRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The supplier Order Name is required</errorMessage>
</ValidationRule>