force-app/main/default/objects/Supplier_Order__c/validationRules/Tax_Rate_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_Rate_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>(Tax_Rate__c  &lt; 0.04 &amp;&amp;  Tax_Rate__c &gt; 0.1)</errorConditionFormula>
    <errorDisplayField>Cost__c</errorDisplayField>
    <errorMessage>Please check the tax rate so Tax rate must be greater than 4% or less than 10%</errorMessage>
</ValidationRule>